组件自适应抽象接口